@@ -1,15 +1,16 @@
 package net.sf.openrocket.communication;
 
+import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
+
+import net.sf.openrocket.util.BugException;
 
 public abstract class Communicator {
 
 	protected static final String BUG_REPORT_URL;
 
-	protected static final String UPDATE_URL;
-	protected static final String UPDATE_URL_LATEST;	// Extra URL needed for the latest GitHub release
+	protected static final String UPDATE_INFO_URL;
 	
 	static {
 		String url;
@@ -19,14 +20,9 @@ public abstract class Communicator {
 		BUG_REPORT_URL = url;
 		
 		url = System.getProperty("openrocket.debug.updateurl");
-		if (url == null) {
-			url = "https://api.github.com/repos/openrocket/openrocket/releases";
-			UPDATE_URL_LATEST = "https://api.github.com/repos/openrocket/openrocket/releases/latest";
-		}
-		else {
-			UPDATE_URL_LATEST = null;
-		}
-		UPDATE_URL = url;
+		if (url == null)
+			url = "http://openrocket.sourceforge.net/actions/updates";
+		UPDATE_INFO_URL = url;
 	}
 	
 
@@ -36,6 +32,10 @@ public abstract class Communicator {
 	protected static final String BUG_REPORT_PARAM = "content";
 	protected static final int BUG_REPORT_RESPONSE_CODE = HttpURLConnection.HTTP_ACCEPTED;
 	protected static final int CONNECTION_TIMEOUT = 10000;  // in milliseconds
+
+	protected static final int UPDATE_INFO_UPDATE_AVAILABLE = HttpURLConnection.HTTP_OK;
+	protected static final int UPDATE_INFO_NO_UPDATE_CODE = HttpURLConnection.HTTP_NO_CONTENT;
+	protected static final String UPDATE_INFO_CONTENT_TYPE = "text/plain";
 
 	// Limit the number of bytes that can be read from the server
 	protected static final int MAX_INPUT_BYTES = 20000;
@@ -64,7 +64,11 @@ public abstract class Communicator {
 	public static String encode(String str) {
 		if (str == null)
 			return "null";
-        return URLEncoder.encode(str, StandardCharsets.UTF_8);
-    }
+		try {
+			return URLEncoder.encode(str, "UTF-8");
+		} catch (UnsupportedEncodingException e) {
+			throw new BugException("Unsupported encoding UTF-8", e);
+		}
+	}
 	
 }
